<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.coley</groupId>
	<artifactId>recaf</artifactId>
	<url>https://github.com/Col-E/Recaf/</url>
	<version>2.0.0</version>
	<name>Recaf</name>
	<description>A modern java bytecode editor</description>
	<!--
	Variables
	-->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<asm.version>7.2-beta</asm.version>
		<cfr.version>0.146</cfr.version>
		<ff.version>382</ff.version>
		<junit.version>5.5.0</junit.version>
	</properties>
	<!-- Additional repo's -->
	<repositories>
		<!-- 3rd party repo, used because I'm too lazy to register on the central -->
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<!-- 3rd party repo, Forge -->
		<repository>
			<id>forge</id>
			<url>http://files.minecraftforge.net/maven</url>
		</repository>
	</repositories>
	<!-- Profiles, for version-specific dependencies / build plugin config -->
	<profiles>
		<profile>
			<id>java8</id>
			<properties>
				<target.version>J8</target.version>
			</properties>
			<activation>
				<!-- Use this profile for JDK 8 -->
				<jdk>1.8</jdk>
			</activation>
			<dependencies>
				<!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
				<dependency>
					<groupId>org.controlsfx</groupId>
					<artifactId>controlsfx</artifactId>
					<version>8.40.14</version>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<!-- Compiler version -->
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.0</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
							<compilerArgs>
								<arg>-Xlint:unchecked</arg>
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>java11</id>
			<properties>
				<target.version>J11</target.version>
			</properties>
			<activation>
				<!-- Use this profile for JDK 11 and newer -->
				<jdk>[11, 13]</jdk>
			</activation>
			<dependencies>
				<!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
				<dependency>
					<groupId>org.controlsfx</groupId>
					<artifactId>controlsfx</artifactId>
					<version>11.0.0</version>
				</dependency>
				<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-web</artifactId>
					<version>11</version>
				</dependency>
				<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-swing -->
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-swing</artifactId>
					<version>11</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<!-- Compiler version -->
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.0</version>
						<configuration>
							<release>11</release>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<!-- Dependencies, not jdk version specific -->
	<dependencies>
	<!-- Functionality -->
		<!--
		ASM: The "all" distribution is not updated as frequently
		and debug information is now included in these partial releases.
		* https://mvnrepository.com/artifact/org.ow2.asm/asm
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-tree
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-commons
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-util
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-analysis
		-->
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-tree</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-util</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-commons</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-analysis</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-core</artifactId>
			<version>3.14.9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-symbol-solver-core -->
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-symbol-solver-core</artifactId>
			<version>3.14.9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.benf/cfr -->
		<dependency>
			<groupId>org.benf</groupId>
			<artifactId>cfr</artifactId>
			<version>${cfr.version}</version>
		</dependency>
		<!-- http://files.minecraftforge.net/maven/net/minecraftforge/fernflower/ -->
		<dependency>
			<groupId>net.minecraftforge</groupId>
			<artifactId>fernflower</artifactId>
			<version>${ff.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>28.0-jre</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.eclipsesource.minimal-json/minimal-json -->
		<dependency>
			<groupId>com.eclipsesource.minimal-json</groupId>
			<artifactId>minimal-json</artifactId>
			<version>0.9.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.12.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.plugface/plugface-core -->
		<dependency>
			<groupId>org.plugface</groupId>
			<artifactId>plugface-core</artifactId>
			<version>0.7.1</version>
		</dependency>
		<dependency>
			<!-- Plugface uses SLF4j, which has an annoying warning msg, this shuts it up -->
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.21</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.sourceforge.jregex/jregex -->
		<dependency>
			<groupId>net.sourceforge.jregex</groupId>
			<artifactId>jregex</artifactId>
			<version>1.2_01</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.atlassian.commonmark/commonmark -->
		<dependency>
			<groupId>com.atlassian.commonmark</groupId>
			<artifactId>commonmark</artifactId>
			<version>0.12.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/info.picocli/picocli -->
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>4.0.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.tinylog/tinylog -->
		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>tinylog</artifactId>
			<version>1.3.6</version>
		</dependency>
		<!-- Needed for tools.jar references -->
		<dependency>
			<groupId>com.github.olivergondza</groupId>
			<artifactId>maven-jdk-tools-wrapper</artifactId>
			<version>0.1</version>
		</dependency>
	<!--- Testing -->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider -->
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-surefire-provider</artifactId>
			<version>1.3.2</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>2.1</version>
			<scope>test</scope>
		</dependency>
	<!--- User interface -->
		<!-- https://mvnrepository.com/artifact/org.fxmisc.richtext/richtextfx -->
		<dependency>
			<groupId>org.fxmisc.richtext</groupId>
			<artifactId>richtextfx</artifactId>
			<version>0.10.1</version>
		</dependency>
	<!-- From jitpack.io -->
		<!-- https://jitpack.io/#Col-E/Simple-Memory-Compiler/ -->
		<dependency>
			<groupId>com.github.Col-E</groupId>
			<artifactId>Simple-Memory-Compiler</artifactId>
			<version>2.1</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
				<targetPath>resources/</targetPath>
				<excludes>
					<exclude>**/*.psd</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<!-- Maven version enforcement -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.4.1</version>
				<executions>
					<execution>
					<id>enforce-maven</id>
					<goals>
						<goal>enforce</goal>
					</goals>
					<configuration>
						<rules>
						<requireMavenVersion>
							<version>3.1.0</version>
						</requireMavenVersion>
						</rules>
					</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
				<configuration>
					<reuseForks>true</reuseForks>
					<forkCount>1</forkCount>
				</configuration>
			</plugin>
			<!-- Packaging -->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<mainClass>me.coley.recaf.Recaf</mainClass>
						</manifest>
						<manifestEntries>
							<Premain-Class>me.coley.recaf.bytecode.Agent</Premain-Class>
							<Agent-Class>me.coley.recaf.bytecode.Agent</Agent-Class>
							<Can-Redefine-Classes>true</Can-Redefine-Classes>
							<Can-Retransform-Classes>true</Can-Retransform-Classes>
							<!-- JDK 9+ compat for RichTextFX -->
							<Add-Exports>javafx.graphics/com.sun.javafx.geom javafx.graphics/com.sun.javafx.text javafx.graphics/com.sun.javafx.scene.text</Add-Exports>
							<Add-Opens>javafx.graphics/javafx.scene.text javafx.graphics/com.sun.javafx.text</Add-Opens>
						</manifestEntries>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<finalName>${project.artifactId}-${project.version}-${target.version}</finalName>
				</configuration>
			</plugin>
			<!-- Style enforcement -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<phase>process-sources</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<consoleOutput>true</consoleOutput>
					<failsOnError>true</failsOnError>
					<failOnViolation>true</failOnViolation>
					<violationSeverity>warning</violationSeverity>
					<linkXRef>false</linkXRef>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.5</version>
				<configuration>
					<!--
						Enables analysis which takes more memory but finds more bugs.
						If you run out of memory, changes the value of the effort element
						to 'low'.
					-->
					<effort>Max</effort>
					<!-- Reports all bugs (other values are medium and max) -->
					<threshold>Low</threshold>
					<!-- Produces XML report -->
					<xmlOutput>true</xmlOutput>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
			</plugin>
		</plugins>
	</reporting>
</project>